# cypher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
.github/workflows/windows/: setup.bat
oracles/: CMakeLists.txt  README.md  ecb_key  ecb_leak.c  encryption_oracle.c
src/: CMakeLists.txt  main.c
src/analyzers/: analyzer.h  ecb.c  ecb.h  english.c  english.h  frequency.h  sbx.c  sbx.h
src/base64/: base64.c  base64.h  base64_cli.c
src/cli/: argtype.c  argtype.h  flags.c  flags.h  subcommand.c  subcommand.h  system.c  system.h
src/commands/: analyze.c  analyze.h  base64_cli.c  base64_cli.h  crack.c  crack.h  decrypt.c  decrypt.h  print.c  print.h  rand.c  rand.h  xor_cli.c  xor_cli.h
src/crackers/: crackrbx.c  crackrbx.h  cracksbx.c  cracksbx.h  ecb_leak.c  ecb_leak.h
src/operations/: aes.c  aes.h  hamming.c  hamming.h  pad.c  pad.h  rank.c  rank.h  sbxor.c  sbxor.h  xor.c  xor.h
src/parsers/: base64.c  base64.h  hex.c  hex.h
src/strings/: replace.c  replace.h
src/threading/: pool.c  pool.h  thread_compat.h
src/types/: buffer.c  buffer.h
test/: CMakeLists.txt  test_aes.c  test_argtype.c  test_argtype_stdin.c  test_argtype_stdin_b64.c  test_argtype_stdin_hex.c  test_base64.c  test_buffer.c  test_crackrbx.c  test_cracksbx.c  test_english.c  test_hamming.c  test_pad.c  test_parsers.c  test_rank.c  test_sbxor.c  test_streplace.c  test_subcommand.c  test_threadpool.c  test_xor.c
test/test_data/: cypher  cypher_ecb  cypher_enc
