add_executable(cypher
  main.c
  analyzers/ecb.c
  analyzers/english.c
  analyzers/sbx.c
  cli/argtype.c
  cli/subcommand.c
  crackers/cracksbx.c
  crackers/crackrbx.c
  commands/analyze.c
  commands/base64_cli.c
  commands/crack.c
  commands/decrypt.c
  commands/print.c
  commands/xor_cli.c
  operations/aes.c
  operations/hamming.c
  operations/pad.c
  operations/rank.c
  operations/xor.c
  parsers/base64.c
  parsers/hex.c
  threading/pool.c
  types/buffer.c
)
install(TARGETS cypher)
target_link_libraries(cypher
  LINK_PRIVATE ${Openssl_LIBRARIES}
)
